# acheron

./: .gitignore  .prettierrc  .tsbuildinfo  Acheron_Documentation.md  CHANGELOG.md  README.md  TODO.txt  Token_Documentation.md  babel.config.js  documentation.html  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.erb/configs/: webpack.config.renderer.dev.ts  webpack.config.renderer.prod.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-Bug_report.md  3-Feature_proposal.md  4-Token_proposal.md
.github/workflows/: publish.yml
assets/: assets.d.ts  icon.icns  timerWorker.js  timerWorker.worker
examples/: demo1 generate-rebound-note.ache  demo2 absorb-gate-probability-lfos.ache  demo3 layers-wormhole.ache  demo4 skip-twist-lifespan.ache  demo5 split-randomize.ache
release/app/: package-lock.json  package.json
src/: App.global.scss  App.tsx  AppContext.tsx  Layers.ts  Menu.ts  Migrators.ts  Serialization.ts  SettingsMigrator.ts  Tokens.ts  Types.ts  constants.ts  index.html  index.tsx  main-electron.js  main.dev.ts  main.tsx  menu.ts  orchestrator.ts  package-lock.json  package.json  timerWorker.js  tokens_old.ts  types_old.ts  useLazyRef.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/lib/scripts/: example_script.rb
src-tauri/src/: main.rs
src/Components/: Control.tsx  GoogleIcon.scss  GoogleIcon.tsx  GoogleIconButton.tsx  GridSizeMenu.tsx  HexCell.tsx  HexGrid.tsx  HexGridContextMenu.tsx  IconButton.tsx  InputtableValue.tsx  Inspector.tsx  (+28 more)
(+80 files in other folders)
